[package]
name = "mclanfake"
version = "0.3.0"
authors = ["Niklas Elsbrock <mail@nelsbrock.de>"]
edition = "2021"
description = "Simple program for faking discovery messages of \"Open to LAN\" Minecraft servers"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
format-bytes = "0.3.0"
os_str_bytes = "6.3.0"
